// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test artwork mutations should create an artwork 1`] = `
Object {
  "data": Object {
    "addArtwork": Object {
      "Artworks": Array [
        Object {
          "Auctions": Array [
            Object {
              "currentHigh": 0n,
            },
          ],
          "creator": Object {
            "fullName": "user 1",
          },
          "description": "Art",
          "owner": Object {
            "fullName": "user 1",
          },
          "price": null,
          "reservePrice": 50n,
          "saleType": "auction",
          "title": "strstrstr",
          "tokenId": "33",
          "txHash": "123",
        },
      ],
      "ClientErrorArgumentsConflict": null,
      "ClientErrorArtworkNotFound": null,
      "ClientErrorUnknown": null,
      "ClientErrorUserUnauthorized": null,
      "ExternalChainError": null,
      "ExternalChainErrorStillPending": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork mutations should create an artwork with no reserve price of auction is specified and reserve price is 0 1`] = `
Object {
  "data": Object {
    "addArtwork": Object {
      "Artworks": Array [
        Object {
          "Auctions": Array [
            Object {
              "currentHigh": 0n,
            },
          ],
          "creator": Object {
            "fullName": "user 1",
          },
          "description": "Art",
          "owner": Object {
            "fullName": "user 1",
          },
          "price": null,
          "reservePrice": null,
          "saleType": "auction",
          "title": "strstrstr",
          "tokenId": "35",
          "txHash": "123",
        },
      ],
      "ClientErrorArgumentsConflict": null,
      "ClientErrorArtworkNotFound": null,
      "ClientErrorUnknown": null,
      "ClientErrorUserUnauthorized": null,
      "ExternalChainError": null,
      "ExternalChainErrorStillPending": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork mutations should create an artwork without an auction if fixed sale is specified 1`] = `
Object {
  "data": Object {
    "addArtwork": Object {
      "Artworks": Array [
        Object {
          "Auctions": Array [],
          "creator": Object {
            "fullName": "user 1",
          },
          "description": "Art",
          "owner": Object {
            "fullName": "user 1",
          },
          "price": 50n,
          "reservePrice": null,
          "saleType": "fixed",
          "title": "strstrstr",
          "tokenId": "34",
          "txHash": "123",
        },
      ],
      "ClientErrorArgumentsConflict": null,
      "ClientErrorArtworkNotFound": null,
      "ClientErrorUnknown": null,
      "ClientErrorUserUnauthorized": null,
      "ExternalChainError": null,
      "ExternalChainErrorStillPending": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork mutations should fail to create an artwork because the user is not an approved creator 1`] = `
Object {
  "data": Object {
    "addArtwork": Object {
      "Artworks": null,
      "ClientErrorArgumentsConflict": null,
      "ClientErrorArtworkNotFound": null,
      "ClientErrorUnknown": null,
      "ClientErrorUserUnauthorized": Object {
        "message": "Not approved or non-existing creator",
      },
      "ExternalChainError": null,
      "ExternalChainErrorStillPending": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork mutations should fail to create an artwork with fixed sale type and reserve price set 1`] = `
Object {
  "data": Object {
    "addArtwork": Object {
      "Artworks": null,
      "ClientErrorArgumentsConflict": Object {
        "message": "Argument conflict.",
        "path": "Fixed sale requires a price arg and no reservePrice arg",
      },
      "ClientErrorArtworkNotFound": null,
      "ClientErrorUnknown": null,
      "ClientErrorUserUnauthorized": null,
      "ExternalChainError": null,
      "ExternalChainErrorStillPending": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
